# ros2_ws

./: README.md
src/sercli/: CMakeLists.txt  package.xml
src/sercli/src/: cli.cpp  pub.cpp  serv.cpp
